--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
  <li class="packed"><a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (Fall 2020 &mdash; Present)</li>
- <li class="packed"><a href="https://www.linkedin.com/in/gideon-a-150136134/">Gideon Adele</a>, PhD student (Spring 2022 &mdash; Present)</li>
+<!--  <li class="packed"><a href="https://www.linkedin.com/in/gideon-a-150136134/">Gideon Adele</a>, PhD student (Spring 2022 &mdash; Present)</li> -->
  <li class="packed"><a href="#">Shengfang Ma</a>, M.S. student (Fall 2021 &mdash; Present)</li>
  <li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Present)</li>
  <li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Present)</li>
- <li class="packed"><a href="#">Uddhav Ramachandran</a>, High School Intern (Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="#">Uddhav Ramachandran</a>, High School Intern, then B.S. C.S. (Fall 2020 &mdash; Present)</li>
  </ul>
 
 <h4>Past Students</h4>
