--- a/pubs.html
+++ b/pubs.html
@@ -48,27 +48,31 @@
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
 		<li>
-		 <a href="https://arxiv.org/abs/2104.14131">Actor-centered Representations for Action Localization in Streaming Videos</a>.<br>
-		 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
-		 European Conference on Computer Vision (ECCV) 2022. <br>
-
+			 <a href="https://arxiv.org/abs/2104.14131">Actor-centered Representations for Action Localization in Streaming Videos</a>.<br>
+			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+			 European Conference on Computer Vision (ECCV) 2022. <br>
 		 </li>
 		<li>
-		 <a href="#">Time-Series Analysis of Video Graphs Using Joint Kalman Smoothing and Registration</a>.<br>
-		 Aditi Bal Basu, Ramy Mounir, Sathyanarayanan N. Aakur, Anuj Srivastava, Sudeep Sarkar <br>
-		 European Conference on Computer Vision (ECCV) 2022. <a href="#"> [Preprint Coming Soon] </a> <br>
-
+			 <a href="#">Time-Series Analysis of Video Graphs Using Joint Kalman Smoothing and Registration</a>.<br>
+			 Aditi Bal Basu, Ramy Mounir, Sathyanarayanan N. Aakur, Anuj Srivastava, Sudeep Sarkar <br>
+			 European Conference on Computer Vision (ECCV) 2022. <a href="#"> [Preprint Coming Soon] </a> <br>
 		 </li>
 		<li> 
-		<a href="#">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
-		Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy <br>
-		International Conference on Pattern Recognition (ICPR-2022) <a href="#"> [Preprint Coming Soon] </a>
+			<a href="#">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
+			Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy <br>
+			International Conference on Pattern Recognition (ICPR-2022) <a href="#"> [Preprint Coming Soon] </a>
 		</li>
 		<li>
- 		<a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
- 		Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
- 		Pattern Recognition Letters, 2022 <br>
+ 			<a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
+ 			Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
+ 			Pattern Recognition Letters, 2022 <br>
 		 </li>
+		<li>
+			<a href=https://icaps22.icaps-conference.org/workshops/KEPS/KEPS-22_paper_4286.pdf">A Rich Recipe Representation as Plan to Support Expressive Multi-Modal Queries
+			on Recipe Content and Preparation Process</a>
+			Vishal Pallagani, Priyadharsini Ramamurthy, Vedant Khandelwal Revathy Venkataramanan, Kausik Lakkaraju, Sathyanarayanan N. Aakur, Biplav Srivastava <br>
+			ICAPS 2022 Workshop on Knowledge Engineering for Planning and Scheduling (KEPS), 2022 <br>
+		</li>
 		<li>
 			<a href="https://arxiv.org/abs/2111.05448">Towards Active Vision for Action Localization with Reactive Control and Predictive Learning</a>. <br> 
 			Shubham Trehan, Sathyanarayanan Aakur<br>
