--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Spring'23</dt>
+  <dd>
+	  Received funding from USDA for multimodal time series classification for stress detection in precision agriculture! 
+  </dd>
+
   <dt>Fall'22</dt>
   <dd>
 	  Serving as Area Chair for <a href="https://cvpr2023.thecvf.com/"> CVPR 2023 </a>! 
