--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'23</dt>
   <dd>
+	  One paper on Scene Graph Generation accepted at <a href="">CVPR 2023</a>. Congrats to Sanjoy on his first CVPR paper and third overall. Preprint <a href="https://arxiv.org/abs/2211.16636"> here </a>
+  </dd>
+  <dt>Spring'23</dt>
+  <dd>
 	  Received funding from USDA for multimodal time series classification for stress detection in precision agriculture! 
   </dd>
 
