--- a/pubs.html
+++ b/pubs.html
@@ -45,8 +45,24 @@
 
 <!-- 2022 -->
 	<section>
+	<h2 style="text-align: center">2023</h2>	
+	<ul>
+		<li>
+			<a href="https://arxiv.org/abs/2211.16636">Iterative Scene Graph Generation with Generative Transformers</a>. <br>
+			Sanjoy Kundu, Sathyanarayanan Aakur <br>
+			IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2023. Accepted, to appear. <br>
+		</li>
+	</ul>
+		
+	</section>
+	<section>
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
+		<li>
+			<a href="#">Peanut Seed Germination Detection from Aerial Images</a>. <br>
+			Shengfang Ma, Yuting Zhou, K. Colton Flynn, Sathyanarayanan N. Aakur<br>
+			IEEE Workshop on Applied Imagery and Pattern Recognition (AIPR), 2022. Accepted, to appear. <br>
+		</li>
 		<li>
 			 <a href="https://arxiv.org/abs/2104.14131">Actor-centered Representations for Action Localization in Streaming Videos</a>.<br>
 			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
