--- a/pubs.html
+++ b/pubs.html
@@ -69,14 +69,14 @@
 			 European Conference on Computer Vision (ECCV) 2022. <br>
 		 </li>
 		<li>
-			 <a href="#">Time-Series Analysis of Video Graphs Using Joint Kalman Smoothing and Registration</a>.<br>
+			 <a href="https://link.springer.com/chapter/10.1007/978-3-031-19833-5_26"> Bayesian Tracking of Video Graphs Using Joint Kalman Smoothing and Registration</a>.<br>
 			 Aditi Bal Basu, Ramy Mounir, Sathyanarayanan N. Aakur, Anuj Srivastava, Sudeep Sarkar <br>
-			 European Conference on Computer Vision (ECCV) 2022. <a href="#"> [Preprint Coming Soon] </a> <br>
+			 European Conference on Computer Vision (ECCV) 2022. <br>
 		 </li>
 		<li> 
-			<a href="#">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
+			<a href="https://ieeexplore.ieee.org/abstract/document/9956441/">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
 			Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy <br>
-			International Conference on Pattern Recognition (ICPR-2022) <a href="#"> [Preprint Coming Soon] </a>
+			International Conference on Pattern Recognition (ICPR-2022)</a>
 		</li>
 		<li>
  			<a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
