--- a/Projects/IS_GGT/index.html
+++ b/Projects/IS_GGT/index.html
@@ -96,7 +96,7 @@
   <center><h2>Example 1</h2></center>
     <div class="col-xs-3">
       <center>
-          <img class="thumb" src="./img/im398_bb.png" /> <br>
+          <img class="thumb" src="./img/im398_BB.png" /> <br>
           Input Image with Groundtruth Bounding Boxes
       </center>
     </div>
@@ -127,7 +127,7 @@
 <center><h2>Example 2</h2></center>
     <div class="col-xs-3">
       <center>
-          <img class="thumb" src="./img/im_498268_bb.png" /> <br>
+          <img class="thumb" src="./img/im_498268_BB.png" /> <br>
           Input Image with Groundtruth Bounding Boxes
       </center>
     </div>
