--- a/pubs.html
+++ b/pubs.html
@@ -59,9 +59,9 @@
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
 		<li>
-			<a href="#">Peanut Seed Germination Detection from Aerial Images</a>. <br>
+			<a href="https://ieeexplore.ieee.org/abstract/document/10092219">Peanut Seed Germination Detection from Aerial Images</a>. <br>
 			Shengfang Ma, Yuting Zhou, K. Colton Flynn, Sathyanarayanan N. Aakur<br>
-			IEEE Workshop on Applied Imagery and Pattern Recognition (AIPR), 2022. Accepted, to appear. <br>
+			IEEE Workshop on Applied Imagery and Pattern Recognition (AIPR), 2022. <br>
 		</li>
 		<li>
 			 <a href="https://arxiv.org/abs/2104.14131">Actor-centered Representations for Action Localization in Streaming Videos</a>.<br>
