--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'23</dt>
   <dd>
+	  Our group is moving to the <a href="https://eng.auburn.edu/csse/">CSSE Department </a> at <a href="https://eng.auburn.edu/">Auburn University</a> in Fall 2023!!
+  </dd>
+  <dt>Spring'23</dt>
+  <dd>
 	  Serving as Area Chair for <a href="https://nips.cc/">NeurIPS 2023</a>!
   </dd>
   <dt>Spring'23</dt>
@@ -117,7 +121,8 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela</a> and <a href="https://www.linkedin.com/in/vennela-indla-a00604130/">Vennela</a>! Preprint coming soon!
   </dd>
-  <dt>Fall'20</dt>
+<!--
+<dt>Fall'20</dt>
   <dd>
     Invited as reviewer for CVPR 2021, ICML 2021, CRV 2021, ICCV 2021.
   </dd>
@@ -133,7 +138,6 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     One paper on Benchmarking Object Detection models on Resource Constrained Domains accepted at AIPR 2020! Congrats <a href=""> Sanjoy </a> and <a href=""> Nikhil</a>! Preprint coming soon!
   </dd>
-<!--
   <dt>Fall'20</dt>
   <dd>
     Organizing the <a href="https://sites.google.com/view/deep-dial2021/">DEEP-DIAL Workshop at AAAI 2021</a> with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
