--- a/pubs.html
+++ b/pubs.html
@@ -37,7 +37,18 @@
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
  arXiv:1909.03099, 2019. <br>
  </li>
+	
+<li>
+ <a href="https://arxiv.org/abs/2305.16602">Discovering Novel Actions in an Open World with Object-Grounded Visual Commonsense Reasoning</a>.<br>
+ Sathyanarayanan N. Aakur, Sanjoy Kundu, Shubham Trehan <br>
+ arXiv:2305.16602, 2023. <br>
+ </li>
  
+<li>
+<a href="https://arxiv.org/abs/2212.00015">Scalable Pathogen Detection from Next Generation DNA Sequencing with Deep Learning</a>.<br>
+Sai Narayanan, Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy, Arunkumar Bagavathi, Vishalini Ramnath, Akhilesh Ramachandran
+arXiv:2212.00015, 2022. <br>
+</li>
 
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
