--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@ Sathyanarayanan N. Aakur <br>
 Assistant Professor <br>
 <a href="http://www.cs.okstate.edu/">Department of Computer Science</a> <br>
 <a href="http://www.okstate.edu/">Oklahoma State University</a> <br>
-
+<p style="color:red;">
+Our group is moving to the <a href="https://eng.auburn.edu/csse/">CSSE Department </a> at <a href="https://eng.auburn.edu/">Auburn University</a> in Fall 2023!!
+</p>
 <br>
 Email: saakurn -at- okstate.edu <br>
 
@@ -51,9 +53,9 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-  <dt>Spring'23</dt>
+  <dt>Summer'23</dt>
   <dd>
-	  Our group is moving to the <a href="https://eng.auburn.edu/csse/">CSSE Department </a> at <a href="https://eng.auburn.edu/">Auburn University</a> in Fall 2023!!
+	  Our paper, with Dr. Sudeep Sarkar (USF), on neuro-symbolic knowledge distillation for commonsense NLI has been accepted into the prestigious IEEE Transactions on Pattern Analysis and Machine Intelligence! Preprint to come soon!
   </dd>
   <dt>Spring'23</dt>
   <dd>
