--- a/pubs.html
+++ b/pubs.html
@@ -31,12 +31,6 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
-
- <li>
- <a href="https://arxiv.org/abs/1909.03099">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
- Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
- arXiv:1909.03099, 2019. <br>
- </li>
 	
 <li>
  <a href="https://arxiv.org/abs/2305.16602">Discovering Novel Actions in an Open World with Object-Grounded Visual Commonsense Reasoning</a>.<br>
@@ -57,11 +51,21 @@ arXiv:2212.00015, 2022. <br>
 <!-- 2022 -->
 	<section>
 	<h2 style="text-align: center">2023</h2>	
-	<ul>
+	<ul> 
+		<li>
+			 <a href="#">Leveraging Symbolic Knowledge Bases for Commonsense Natural Language Inference using Pattern Theory</a>.<br>
+			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+			 IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2023. <br>
+		 </li>
+		<li>
+			<a href="">An Insight on Recent Advancements and Future Perspectives in Detection Techniques of Parkinson’s Disease</a>. <br/>
+			M Suchetha, Snehith Sankineni, Aanchal Saraswat, Sathyanarayanan N Aakur, S Sehastrajit, D Edwin Dhas <br/>
+			Evolutionary Intelligence. Accepted, to appear. <br/>
+		</li>
 		<li>
 			<a href="https://arxiv.org/abs/2211.16636">Iterative Scene Graph Generation with Generative Transformers</a>. <br>
 			Sanjoy Kundu, Sathyanarayanan Aakur <br>
-			IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2023. Accepted, to appear. <br>
+			IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <br>
 		</li>
 	</ul>
 		
