--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+	<dd>Serving as Senior Program Committee Member for <a href="https://cods-comad.in/index.php">CODS-COMAD 2024</a></dd>
   <dt>Summer'23</dt>
   <dd>
 	  Our paper, with Dr. Sudeep Sarkar (USF), on neuro-symbolic knowledge distillation for commonsense NLI has been accepted into the prestigious IEEE Transactions on Pattern Analysis and Machine Intelligence! Preprint to come soon!
