--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
  <meta charset="utf-8">
- <meta name="keywords" content="Sathyanarayanan, Aakur, Oklahoma State, machine learning, computer vision, artificial intelligence, graphical models, deep learning, visual question answering, vision and language, visual dialog">
- <meta name="description" content="Assistant Professor (Oklahoma State).">
- <meta name='og:description' content='Assistant Professor (Oklahoma State)'/>
+ <meta name="keywords" content="Sathyanarayanan, Aakur, Auburn, machine learning, computer vision, artificial intelligence, graphical models, deep learning, visual question answering, vision and language, visual dialog">
+ <meta name="description" content="Assistant Professor (Auburn University).">
+ <meta name='og:description' content='Assistant Professor (Auburn University)'/>
  <meta name="robots" content="all">
  <title>Sathyanarayanan N. Aakur</title>
  <link rel="stylesheet" href="./css/newStyle.css">
@@ -35,13 +35,10 @@
 Sathyanarayanan N. Aakur <br>
 <br>
 Assistant Professor <br>
-<a href="http://www.cs.okstate.edu/">Department of Computer Science</a> <br>
-<a href="http://www.okstate.edu/">Oklahoma State University</a> <br>
-<p style="color:red;">
-Our group is moving to the <a href="https://eng.auburn.edu/csse/">CSSE Department </a> at <a href="https://eng.auburn.edu/">Auburn University</a> in Fall 2023!!
-</p>
+<a href="https://eng.auburn.edu/csse/">Department of Computer Science and Software Engineering</a> <br>
+<a href="http://auburn/">Auburn University</a> <br>
 <br>
-Email: saakurn -at- okstate.edu <br>
+Email: san0028 -at- auburn.edu <br>
 
 <br>
 [<a href="https://www.linkedin.com/in/sathyanarayanan-aakur-926b35a1"> LinkedIn </a>] [<a href="https://twitter.com/saakur3"> Twitter </a>]
