--- a/pubs.html
+++ b/pubs.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
  <meta charset="utf-8">
- <meta name="keywords" content="Sathyanarayanan, Aakur, Oklahoma State, machine learning, computer vision, artificial intelligence, graphical models, deep learning, visual question answering, vision and language, visual dialog">
- <meta name="description" content="Assistant Professor (Oklahoma State).">
- <meta name='og:description' content='Assistant Professor (Oklahoma State)'/>
+ <meta name="keywords" content="Sathyanarayanan, Aakur, Auburn University, machine learning, computer vision, artificial intelligence, graphical models, deep learning, visual question answering, vision and language, visual dialog">
+ <meta name="description" content="Assistant Professor (Auburn University).">
+ <meta name='og:description' content='Assistant Professor (Auburn University)'/>
  <meta name="robots" content="all">
  <title>Sathyanarayanan N. Aakur</title>
  <link rel="stylesheet" href="./css/newStyle.css">
@@ -53,14 +53,14 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2023</h2>	
 	<ul> 
 		<li>
-			 <a href="#">Leveraging Symbolic Knowledge Bases for Commonsense Natural Language Inference using Pattern Theory</a>.<br>
+			 <a href="https://ieeexplore.ieee.org/abstract/document/10158053">Leveraging Symbolic Knowledge Bases for Commonsense Natural Language Inference using Pattern Theory</a>.<br>
 			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
 			 IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2023. <br>
 		 </li>
 		<li>
-			<a href="">An Insight on Recent Advancements and Future Perspectives in Detection Techniques of Parkinson’s Disease</a>. <br/>
+			<a href="https://link.springer.com/article/10.1007/s12065-023-00859-7">An Insight on Recent Advancements and Future Perspectives in Detection Techniques of Parkinson’s Disease</a>. <br/>
 			M Suchetha, Snehith Sankineni, Aanchal Saraswat, Sathyanarayanan N Aakur, S Sehastrajit, D Edwin Dhas <br/>
-			Evolutionary Intelligence. Accepted, to appear. <br/>
+			Evolutionary Intelligence. <br/>
 		</li>
 		<li>
 			<a href="https://arxiv.org/abs/2211.16636">Iterative Scene Graph Generation with Generative Transformers</a>. <br>
@@ -158,7 +158,7 @@ arXiv:2212.00015, 2022. <br>
 		 </li>
 		 
 		<li>
-			<a href="">Benchmark and Evaluation of Low Resource Object Detection in Biomedical Images</a>,<br>
+			<a href="https://ieeexplore.ieee.org/document/9425104">Benchmark and Evaluation of Low Resource Object Detection in Biomedical Images</a>,<br>
 			Sanjoy Kundu*, Nikhil Gunti*, Bailey Hendrickson*, Sunil More, Sathyanarayanan Aakur <br>
 			IEEE Workshop on Applied Imagery and Pattern Recognition, 2020<br>
 		</li>
@@ -169,7 +169,7 @@ arXiv:2212.00015, 2022. <br>
 		 </li>
 
 		<li>
-			<a href="#">Dissecting Convolutional Neural Networks for Efficient Implementation on Constrained Platforms</a>.<br>
+			<a href="https://ieeexplore.ieee.org/document/9105384">Dissecting Convolutional Neural Networks for Efficient Implementation on Constrained Platforms</a>.<br>
 			Vishalini R. Laguduva, Shakil Mahmud, Sathyanarayanan Aakur, Robert Karam, Srinivas Katkoori. <br>
 			IEEE International Conferenceon VLSI Design (VLSID), 2020.<br>
 		</li>
@@ -182,7 +182,7 @@ arXiv:2212.00015, 2022. <br>
 	<ul>
 
 		<li>
-			<a href="#">Latent Space Modeling for Cloning Encrypted PUF-based Authentication</a>.<br>
+			<a href="https://link.springer.com/chapter/10.1007/978-3-030-43605-6_9">Latent Space Modeling for Cloning Encrypted PUF-based Authentication</a>.<br>
 			Vishalini R. Laguduva, Sathyanarayanan Aakur, Srinivas Katkoori<br>
 			IFIP International Internet of Things (IoT) Conference, 2019.<br>
 		</li>
@@ -200,7 +200,7 @@ arXiv:2212.00015, 2022. <br>
 		 </li>
 
 		 <li>
-		 	<a href="#">Fine-grained Action Detection in Long Surveillance Videos</a>.<br>
+		 	<a href="https://ieeexplore.ieee.org/document/8638312">Fine-grained Action Detection in Long Surveillance Videos</a>.<br>
 			 Sathyanarayanan Aakur, Daniel Sawyer, Sudeep Sarkar<br>
 			 Workshop on Human Activity Detection in Multi-Camera, Continuous, Long-Duration Video (HADCV'19), Winter Conference on Applications of Computer Vision (WACV) 2019.<br>
 		 </li>
@@ -224,7 +224,7 @@ arXiv:2212.00015, 2022. <br>
 	<ul>
 
 		 <li>
-			 <a href="#">Using semantic relationships among objects for geospatial land use classification</a>.<br>
+			 <a href="https://ieeexplore.ieee.org/document/8707405">Using semantic relationships among objects for geospatial land use classification</a>.<br>
 			 Gilbert Rotich*, Sathyanarayanan Aakur*, Rodrigo Minetto, Mauricio Segundo, Sudeep Sarkar<br>
 			 IEEE Workshop on Applied Imagery and Pattern Recognition, 2018<br>
 		 </li>
