--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Summer'23</dt>
 	<dd>Serving as Senior Program Committee Member for <a href="https://cods-comad.in/index.php">CODS-COMAD 2024</a></dd>
   <dt>Summer'23</dt>
   <dd>
