--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Sathyanarayanan N. Aakur <br>
 <br>
 Assistant Professor <br>
 <a href="https://eng.auburn.edu/csse/">Department of Computer Science and Software Engineering</a> <br>
-<a href="http://auburn/">Auburn University</a> <br>
+<a href="http://auburn.edu/">Auburn University</a> <br>
 <br>
 Email: san0028 -at- auburn.edu <br>
 
@@ -50,6 +50,8 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Fall'23</dt>
+	<dd>Moved to the <a href="https://eng.auburn.edu/csse/">CSSE Department</a> at <a href="http://auburn.edu/">Auburn University!</a></dd>
   <dt>Summer'23</dt>
 	<dd>Serving as Senior Program Committee Member for <a href="https://cods-comad.in/index.php">CODS-COMAD 2024</a></dd>
   <dt>Summer'23</dt>
