--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-  <dt>Fall'23</dt>
+<dt>Fall'23</dt>
+	<dd>Serving as Demo Chair and Area Chair at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024!</a> Looking forward to your submissions!</dd>
+<dt>Fall'23</dt>
 	<dd>Moved to the <a href="https://eng.auburn.edu/csse/">CSSE Department</a> at <a href="http://auburn.edu/">Auburn University!</a></dd>
   <dt>Summer'23</dt>
 	<dd>Serving as Senior Program Committee Member for <a href="https://cods-comad.in/index.php">CODS-COMAD 2024</a></dd>
