--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">About Me</h2>
 
 <p>
-I am an Assistant Professor of <a target='_blank' href='https://cs.okstate.edu'>Computer Science</a> at <a target='_blank' href='https://okstate.edu'>Oklahoma State University</a>.
+I am an Assistant Professor in the <a target='_blank' href='https://eng.auburn.edu/csse/'>Computer Science and Software Engineering </a> Deoartment at <a target='_blank' href='https://www.auburn.edu'>Auburn University</a>. Previously, I was an Assistant Professor in the Department of Computer Science at Oklahoma State University, Stillwater.
 </p>
 
 <p>
@@ -240,7 +240,7 @@ I received my PhD from <a target='_blank' href='https://usf.edu'>University of S
 <a name="research"></a>
 <h2 style="text-align: center">Research</h2>
 <p>
-In my research, I’m broadly interested in the intersection of computer vision, natural language processing and psychology: I aim to build intelligent agents that understand the visual world beyond recognition (labels) or captions (sentences) without the need for explicit human supervision through expensive annotations.
+In my research, I’m broadly interested in the intersection of computer vision, natural language processing, and psychology: I aim to build intelligent agents that understand the visual world beyond recognition (labels) or captions (sentences) without the need for explicit human supervision through expensive annotations.
 </p>
 
 This entails developing approaches that do things such as:
@@ -251,7 +251,7 @@ This entails developing approaches that do things such as:
 </ul>
 
 <p>
- Much of my group's current work focuses on analyzing, modeling, and synthesizing complex video scenes and the semantic structure that can describe them. I also work on applying machine learning to other domains such as IoT security and running deep learning algorithms on constrained platforms like FPGA.
+ Much of my group's current work focuses on analyzing, modeling, and synthesizing complex video scenes and the semantic structure that can describe them. I also work on applying machine learning to other domains, such as IoTs We also work on use-inspired artificial intelligence research with applications in agriculture and animal diagnostics.
 </p>
 
 
