--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ Email: san0028 -at- auburn.edu <br>
   <dd>
 	  One paper on <i>Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</i> has been accepted at <a href="https://www.miccai2021.org/en/default.asp">MICCAI 2021</a>!
   </dd>	
+<!--
   <dt>Spring'21</dt>
   <dd>
     I will be an Area Chair for <a href="http://cvpr2022.thecvf.com/">CVPR 2022</a> and <a href="https://2021.acmmm.org/">ACM Multimedia 2021</a>!
@@ -126,7 +127,7 @@ Email: san0028 -at- auburn.edu <br>
   <dd>
     One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela</a> and <a href="https://www.linkedin.com/in/vennela-indla-a00604130/">Vennela</a>! Preprint coming soon!
   </dd>
-<!--
+
 <dt>Fall'20</dt>
   <dd>
     Invited as reviewer for CVPR 2021, ICML 2021, CRV 2021, ICCV 2021.
@@ -264,8 +265,9 @@ This entails developing approaches that do things such as:
 <a name="teaching"></a>
 <h2 style="text-align: center">Teaching</h2>
 <ul>
- <li class="packed">Fall 2020, 2021: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a></li>
- <li class="packed">Spring 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>.</li>
+ <li class="packed">Fall 2023: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
+ <li class="packed">Fall 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a>. Oklahoma State University.</li>
+ <li class="packed">Spring 2020, 2021, 2022, 2023: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>. Oklahoma State University.</li>
  <li class="packed">Summer 2019: <a href="#">COP 2512: IT Programming Fundamentals</a>. University of South Florida (USF) </li>
  <li class="packed">Spring 2019: Co-taught <a href="#">CAP 6415: Computer Vision</a>. Primary Instructor: <a href="https://www.usf.edu/engineering/cse/people/sarkar-sudeep.aspx"> Dr. Sudeep Sarkar. </a> <a href="http://cse.usf.edu"> </a> (USF) </li>
  <li class="packed">Summer 2016: <a href="#">COP 2512: IT Programming Fundamentals</a>. <a href="http://cse.usf.edu"> </a> (USF) </li>
@@ -284,17 +286,17 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
 <h4>Students</h4>
 <ul>
  <li class="packed"><a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
- <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
- <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (Fall 2020 &mdash; Present)</li>
-<!--  <li class="packed"><a href="https://www.linkedin.com/in/gideon-a-150136134/">Gideon Adele</a>, PhD student (Spring 2022 &mdash; Present)</li> -->
- <li class="packed"><a href="#">Shengfang Ma</a>, M.S. student (Fall 2021 &mdash; Present)</li>
- <li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Present)</li>
- <li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Present)</li>
- <li class="packed"><a href="#">Uddhav Ramachandran</a>, High School Intern, then B.S. C.S. (Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
+ <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (OSU, Fall 2020 &mdash; Present)</li>
+ <li class="packed"><a href="#">Shengfang Ma</a>, M.S. student (OSU, Fall 2021 &mdash; Present)</li>
+ <li class="packed"><a href="https://www.linkedin.com/in/venkata-vavilthota/">Venkata Ragavendra Vavilthota</a>, M.S. student (OSU, Spring 2023 &mdash; Present)</li>
+ <li class="packed"><a href="#">Uddhav Ramachandran</a>, High School Intern, then B.S. C.S. (OSU, Fall 2020 &mdash; Present)</li>
  </ul>
 
 <h4>Past Students</h4>
 <ul>
+<li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Present)</li>
+<li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Present)</li>
 <li class="packed"><a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Fall 2021). First Job: SDE, Amazon</li> 
 <li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Fall 2021)</li>
 <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Spring 2021). First Job: Data Scientst, Concat Systems</li> 
