--- a/index.html
+++ b/index.html
@@ -324,6 +324,13 @@ Our research is supported by the following:
 <h2 style="text-align: center">Talks</h2>
 <br/>
 <ul>
+<li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. 7th Summer School on AI, IIT-Hyderabad. Summer 2023 </li>
+<li class="packed">Representation Learning for Metagenomics: An Explorative Study. INTERACT Symposium on One Health and One Medicine. Summer 2023</li>
+<li class="packed">Towards Open World Event Understanding with Neuro Symbolic Reasoning. The University of Iowa. Spring 2023 </li>
+<li class="packed">Towards Open World Multimodal Event Understanding with Neuro Symbolic Reasoning. Auburn University Spring 2023 </li>
+<li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. Washington University in St. Louis. Fall 2023 </li>
+<li class="packed">Towards Open World Visual Understanding with Neuro Symbolic Reasoning. Mega AI series, Pacific Northwest National Lab (PNNL). Fall 2022</li>
+<li class="packed">Towards Intelligent Agents with Open World Visual Understanding. Collaborative Assistants for the Society (CASY 2020), University of South Carolina. Fall 2020</li>
 <li class="packed">Latent Space Modeling for Cloning Encrypted PUF-based Authentication. IFIP International Internet of Things (IoT) Conference, Fall 2019 </li>
 <li class="packed">The Role of Commonsense Reasoning in Visual Understanding. Oklahoma State University. Fall 2018</li>
 <li class="packed">Going Deeper with Semantics: Exploiting Semantic Contextualization for Interpretation of Human Activity in Videos. Technical Seminar Series, Statistical Shape Analysis and Modeling Group, Florida State University. Fall 2018 </li>
