--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
 <ul>
  <li class="packed"><a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
  <li class="packed"><a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
- <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (OSU, Fall 2020 &mdash; Present)</li>
  <li class="packed"><a href="#">Shengfang Ma</a>, M.S. student (OSU, Fall 2021 &mdash; Present)</li>
  <li class="packed"><a href="https://www.linkedin.com/in/venkata-vavilthota/">Venkata Ragavendra Vavilthota</a>, M.S. student (OSU, Spring 2023 &mdash; Present)</li>
  <li class="packed"><a href="#">Uddhav Ramachandran</a>, High School Intern, then B.S. C.S. (OSU, Fall 2020 &mdash; Present)</li>
@@ -295,8 +294,9 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
 
 <h4>Past Students</h4>
 <ul>
-<li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Present)</li>
-<li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Present)</li>
+<li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (OSU, Fall 2020 &mdash; Summer 2023)</li>
+<li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Spring 2022)</li>
+<li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Spring 2023)</li>
 <li class="packed"><a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Fall 2021). First Job: SDE, Amazon</li> 
 <li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Fall 2021)</li>
 <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Spring 2021). First Job: Data Scientst, Concat Systems</li> 
