--- a/group.html
+++ b/group.html
@@ -70,16 +70,6 @@
     </p>
   </div>
 
-  <div class="person">
-    <img src="./files/priya.jpeg" alt="thumb" />
-    <p>
-      <a href="#">Priyadharsini Ramamurthy</a>
-      <br />
-      Ph.D. Student <br/>
-      (Fall 2020 - Present)
-    </p>
-  </div>
-
 <!-- 	
    <div class="person">
     <img src="./files/GideonAdele.jpg" alt="thumb" />
@@ -91,26 +81,7 @@
     </p>
   </div>
 	 -->
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="#">Devyn Hubbard</a>
-      <br />
-      B.S. (CS) Student <br/>
-      (Spring 2022 - Present)
-    </p>
-  </div>  
-
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
-      <br />
-      M.S. (CS) Student <br/>
-      (Fall 2021 - Present)
-    </p>
-  </div>  
-
+ 
  <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
     <p>
@@ -171,6 +142,37 @@
       First Job: SDE, Amazon.
     </p>
   </div>
+ 
+  <div class="person">
+    <img src="./files/priya.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Priyadharsini Ramamurthy</a>
+      <br />
+      Ph.D. Student <br/>
+      (Fall 2020 - Summer 2023)
+    </p>
+  </div>
+
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Devyn Hubbard</a>
+      <br />
+      B.S. (CS) Student <br/>
+      (Spring 2022 - Spring 2023)
+    </p>
+  </div>  
+
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
+      <br />
+      M.S. (CS) Student <br/>
+      (Fall 2021 - Spring 2022)
+    </p>
+  </div>  
+
 </div>
 </section>
 
