--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
 
 <h4>Past Students</h4>
 <ul>
-<li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (OSU, Fall 2020 &mdash; Summer 2023)</li>
-<li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Spring 2022)</li>
-<li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Spring 2023)</li>
-<li class="packed"><a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Fall 2021). First Job: SDE, Amazon</li> 
-<li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Fall 2021)</li>
-<li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Spring 2021). First Job: Data Scientst, Concat Systems</li> 
+<li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (OSU, Fall 2020 &mdash; Summer 2023), Then: Ph.D. OSU.</li>
+<li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Spring 2022). Then: SDE, Amazon</li>
+<li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Spring 2023), Then: B.S. OSU.</li>
+<li class="packed"><a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Fall 2021). Then: SDE, Amazon</li> 
+<li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Fall 2021), Then: B.S. OSU</li>
+<li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Spring 2021). Then: Data Scientist, Concat Systems</li> 
  
  </ul>
 
