--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Fall'23</dt>
+	<dd>Serving as Area Chair for <a href="https://wacv2024.thecvf.com/">IEEE/CVF WACV 2024</a></dd>
+<dt>Fall'23</dt>
 	<dd>Serving as Demo Chair and Area Chair at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024!</a> Looking forward to your submissions!</dd>
 <dt>Fall'23</dt>
 	<dd>Moved to the <a href="https://eng.auburn.edu/csse/">CSSE Department</a> at <a href="http://auburn.edu/">Auburn University!</a></dd>
