--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Fall'23</dt>
+	<dd>One paper accepted for Oral presentation at <a href="https://www.icmla-conference.org/icmla23/">IEEE ICMLA 2023</a>! Congrats to Shubham and my undergrad student Udhav on their second and first papers, respectively!</dd>
+<dt>Fall'23</dt>
 	<dd>Serving as Area Chair for <a href="https://wacv2024.thecvf.com/">IEEE/CVF WACV 2024</a></dd>
 <dt>Fall'23</dt>
 	<dd>Serving as Demo Chair and Area Chair at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024!</a> Looking forward to your submissions!</dd>
