--- a/pubs.html
+++ b/pubs.html
@@ -53,6 +53,12 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2023</h2>	
 	<ul> 
 		<li>
+			 <a href="#">ProtoKD: Learning from Extremely Scarce Data for Parasite Ova Recognition.</a>.<br>
+			 Shubham Trehan, Udhav Ramachandran, Ruth Scimeca, Sathyanarayanan N. Aakur <br>
+			 IEEE International Conference on Machine Learning and Applications (ICMLA), 2023. (Oral) <br>
+		 </li>
+
+		<li>
 			 <a href="https://ieeexplore.ieee.org/abstract/document/10158053">Leveraging Symbolic Knowledge Bases for Commonsense Natural Language Inference using Pattern Theory</a>.<br>
 			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
 			 IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2023. <br>
@@ -86,12 +92,12 @@ arXiv:2212.00015, 2022. <br>
 		<li>
 			 <a href="https://link.springer.com/chapter/10.1007/978-3-031-19833-5_26"> Bayesian Tracking of Video Graphs Using Joint Kalman Smoothing and Registration</a>.<br>
 			 Aditi Bal Basu, Ramy Mounir, Sathyanarayanan N. Aakur, Anuj Srivastava, Sudeep Sarkar <br>
-			 European Conference on Computer Vision (ECCV) 2022. <br>
+			 European Conference on Computer Vision (ECCV) 2022. (Oral) <br>
 		 </li>
 		<li> 
 			<a href="https://ieeexplore.ieee.org/abstract/document/9956441/">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
 			Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy <br>
-			International Conference on Pattern Recognition (ICPR-2022)</a>
+			International Conference on Pattern Recognition (ICPR-2022). (Oral) </a>
 		</li>
 		<li>
  			<a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
@@ -122,7 +128,7 @@ arXiv:2212.00015, 2022. <br>
 		<li>
 			<a href="https://arxiv.org/abs/2111.08001">Metagenome2Vec: Building Contextualized Representations for Scalable Metagenome Analysis</a>. <br> 
 			Sathyanarayanan Aakur, Sai Narayanan, Vineela Indla, Vennela Indla, Arunkumar Bagavathi, Akhilesh Ramachandran, and Vishalini Laguduva Ramnath <br>
-			International Conference on Data Mining Workshops (ICDMW-2021) <a href="https://arxiv.org/abs/2111.08001">[Preprint]</a>
+			International Conference on Data Mining Workshops (ICDMW-2021) <a href="https://arxiv.org/abs/2111.08001">[Preprint]</a>. (Oral) <br>
 		</li>
 		<li>
 		 	<a href="https://arxiv.org/abs/2107.09883">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</a>.<br>
@@ -139,7 +145,7 @@ arXiv:2212.00015, 2022. <br>
 		<li>
 			<a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_14">Sim2Real for Metagenomes: Accelerating Animal Diagnostics with Adversarial Co-Training </a>.<br>
 			 Vineela Indla, Vennela Indla, Sai Narayanan, Akhilesh Ramachandran, Arunkumar Bagavathi, Vishalini Laguduva Ramnath, Sathyanarayanan N. Aakur <br>
-			 Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD-2021) <a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_14">[pdf]</a><br>
+			 Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD-2021) <a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_14">[pdf]</a>. (Oral)<br>
 		 </li>
 		 <li>
 		 	<a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling</a>.<br>
