--- a/pubs.html
+++ b/pubs.html
@@ -53,9 +53,9 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2023</h2>	
 	<ul> 
 		<li>
-			 <a href="#">ProtoKD: Learning from Extremely Scarce Data for Parasite Ova Recognition.</a>.<br>
+			 <a href="#">ProtoKD: Learning from Extremely Scarce Data for Parasite Ova Recognition.</a><br>
 			 Shubham Trehan, Udhav Ramachandran, Ruth Scimeca, Sathyanarayanan N. Aakur <br>
-			 IEEE International Conference on Machine Learning and Applications (ICMLA), 2023. (Oral) <br>
+			 IEEE International Conference on Machine Learning and Applications (ICMLA), 2023. (Oral) . [Preprint Coming Soon!] <br>
 		 </li>
 
 		<li>
