--- a/group.html
+++ b/group.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
  <meta charset="utf-8">
- <meta name="keywords" content="Sathyanarayanan, Aakur, Oklahoma State, machine learning, computer vision, artificial intelligence, graphical models, deep learning, visual question answering, vision and language, visual dialog">
- <meta name="description" content="Assistant Professor (Oklahoma State).">
- <meta name='og:description' content='Assistant Professor (Oklahoma State)'/>
+ <meta name="keywords" content="Sathyanarayanan, Aakur, Auburn University, machine learning, computer vision, artificial intelligence, graphical models, deep learning, visual question answering, vision and language, visual dialog">
+ <meta name="description" content="Assistant Professor (Auburn University).">
+ <meta name='og:description' content='Assistant Professor (Auburn University)'/>
  <meta name="robots" content="all">
  <title>Sathyanarayanan N. Aakur</title>
  <link rel="stylesheet" href="./css/newStyle.css">
